--- a/index.qmd
+++ b/index.qmd
@@ -138,6 +138,10 @@ In addition to qualitative studies, software tools have developed to help resear
 
 ## Automatic information extraction with LLMs
 
+In natural language processing, information extraction is a task focus on extracting structured information from unstructured text. A common sub-task is named entity recognition (NER), like identifying person names, locations, and organizations in text [@nadeau2007]. Earlier approaches relied on rule-based systems and regular expressions to extract information. More recent advances, including conditional random fields [@lafferty], word embeddings such as word2vec [@mikolov2013], and transformer-based architectures like BERT [@devlin2019], have led to modern information extraction methods that use large language models with prompting. [TODO: something about prompt engineering]
+
+Using LLMs to extract unstructured text offers the advantage of automating the process at scale. Applications have been seen in epidemiology data [@harrod2024], scientific literature [@katz2024], clinical data [@farzi2024; @hu2024; @sciannameo2024; @gu2025], chemistry knowledge [@schilling-wilhelmi2025], and polymer science [@gupta2024], climate extreme impact [@li2024], phenotypes [@baddour2024], and material properties [@polak2024]. Unlike classic NER tasks, such as extracting clinical data, which typically involves short spans of 1-4 tokens, extracting decision choices and their rationales from published literature often requires handling longer spans. These decisions are inherently less structured and more context-dependent than standard entities, making LLM-based extraction relevant and suitable.
+
 ## Visualization on scientific literature
 
 With the growing volume of scientific publications and the difficulty of navigating the literature to stay informed, there is increasing interest in developing tools to visualize and recommend scientific papers. These systems link papers based on their similarity and relevance, typically determined by keywords [@isenberg2017], citation information (e.g. citation list, co-citation) [@chen2006], or combinations with other relevant paper metadata (e.g. author, title) [@bethard2010; @chou2011; @dörk2012; @heimerl2016]. Recent approaches incorporate text-based information using topic modelling [@alexander2014], argumentation-based information retrieval [@tbahriti2006], and text embedding [@narechania2022]. While metadata and high-level text-based information are useful for finding relevant papers, researchers also need tools that help them *make sense* of the literature rather than simply *locating* it. In applied data analysis, one interest is to understand how studies differ or align in their analytical approaches. Capturing the decisions and reasoning expressed in analyses on a shared theme enables the calculation of similarity metrics based on these choice and their underlying rationale, which supports clustering and visualizing paper to identify common practices in the field.
@@ -705,11 +709,15 @@ We have conducted sensitivity analysis on the text model for obtaining the decis
 
 # Discussion {#sec-discussion}
 
-## Quality of LLM extraction and validation
+## Large-language models for information extraction
 
-Numerous studies have demonstrate the capability of LLMs in various text extraction tasks, but validation is still needed to ensure the quality of the extracted information. Most application tends to focus on comparing with human annotated samples and compute F1 scores from precision and recall.
+Numerous studies have demonstrate the capability of LLMs in various information extraction tasks [@harrod2024; @katz2024; @farzi2024; @hu2024; @sciannameo2024; @gu2025; @schilling-wilhelmi2025; @gupta2024; @li2024; @baddour2024; @polak2024]. Our work adds to this growing body of evidence by showcasing the effectiveness of LLMs information extraction task, specifically for extracting analytic decisions in scientific literature. While some of the information extraction tasks has a short span of 1-4 tokens, for example in clinical data, our task involves extracting more complex decisions and justification for such analytical decisions, where the justification can span a full sentence. This changes the nature of specific named entity recognition (NER) tasks to a more general information extraction task. Our task also require LLMs to link information across sentences and paragraphs to correctly identify the variable associated with each decision and use reasoning to identify whether a justification provided is indeed a reason specific to the choice of the decision. 
 
-While the extraction of decisions from literature could be largely automated with LLMs, manual validations remains essential to ensure the quality of the extracted decisions for further analysis. The quality from the LLM ouput directly affects the amount of manual effort needed for validation and standardization. Using a default temperature of 1 and instructing the model to extract original text rather than paraphrase, we find hallucination is not a major issue with Claude and Gemini for this application. While prompt engineering is used in this work to optimize the prompt for decision extraction, an alternative is to fine-tune a local model to improve LLM performance. Such approach could be beneficial for a systematic literature review, although it would require a labelled decision dataset for training and significantly more training efforts.
+While the extraction of decisions from literature could be largely automated with LLMs, manual validations remains essential to ensure the quality of the extracted decisions for further analysis. Most existing applications compares the LLM outputs with human-annotated samples to demonstrate the effectiveness of LLM extraction through the F1 score from precision and recall. However, this approach requires a labelled dataset for training and testing, which may not be feasible for many applications. In our application, we do not have a labelled decision dataset for training and testing. Instead, we focus on validating the LLM outputs through an interactive shiny application that allows users to review and validate each extracted decision. We also use a secondary LLM (Claude) to standardize the temporal lag choices into two categories: multi-day average and single-day lags, to standardize authors use different expressions to describe temporal lag choices. While the effectiveness with LLM to automate information extraction, it is still an open question on how to validate its output in the absence of a labelled dataset.
+
+Using a default temperature of 1 and instructing the model to extract original text rather than paraphrase, we find hallucination is not a major issue with Claude and Gemini for this application. Given the probabilistic nature of LLM outputs, we also conduct sensitivity analysis on the reproducibility of the outputs and variation among different model providers (Claude and Gemini). We find that our information extraction task in general is stable across multiple runs with the same model and different models perform similarly in terms of the number of decisions extracted, although the specific decisions extracted may differ. 
+
+While prompt engineering is used in this work to optimize the prompt for decision extraction, an alternative is to fine-tune a local model to improve LLM performance. Such approach could be beneficial for a systematic literature review, although it would require a labelled decision dataset for training and significantly more training efforts.
 
 ## Extracting other types of decisions
 
@@ -722,6 +730,12 @@ With the advocacy for reproducibility in science, it is expected that more paper
 <!-- Spatial decisions are generally not well captured because it often conducted uniformly as estimating the city individually to accommodate city heterogeneity. Some papers only consider a handful of cities, while in larger studies the individual city effects are then pooled together using random effect. -->
 
 ## Generalizability of the workflow
+
+Our workflow is scalable and generalizable. In principle, one can take a random set of applied papers for our workflow. However, insights about the data analysis practices are more likely to be learnt when papers share some similarities, for example literature on teh same topic but from different researchers can compare practices, papers use the same methodology but from different fields enables us to compare practices across fields, or even paper with the same variables used and how they are used in different fields.
+
+The prompt for LLMs to extract decisions will need to be customized for individual application of our workflow. The general LLM prompt structure of separating task and rules can be retained and the data structure for recording decisions can be retained. Users may want to further customize the examples throughout the prompt to suit their specific applications. The shiny application for interactively validating and standardizing decisions can be reused for different applications. Calculation of paper similarity requires comparing decisions of the same variable and type among paper pairs. For papers with different levels of similarities, the number of comparable decisions may be limited and diagnostic functions in the `R` package can be used to view the decision between paper pair side by side or provide summary statistics on the number of decisions available for calculating the paper similarities. Uncertainty visualization could be used to highlight the confidence in the similarity metric based on the number of comparable decisions. 
+
+As a new method to collect analytic decision data from literature, our work can connect to meta-analysis to assess how different decisions affect the results and also in general literature search and recommendation applications to find similar papers based on the decisions made in the analysis.
 
 # Conclusion {#sec-conclusion}
 
