--- a/index.qmd
+++ b/index.qmd
@@ -48,24 +48,26 @@ acm-metadata:
   
    \begin{CCSXML}
    <ccs2012>
+    <ceval: <concept>
+      <ceval: <concept_id>10003120.10003121</concept_id>
+      <ceval: <concept_desc>Human-centered computing~Human computer interaction (HCI)</concept_desc>
+      <ceval: <concept_significance>500</concept_significance>
+    </eval: </concept>
     <concept>
-       <concept_id>10010405.10010497.10010504.10010505</concept_id>
-       <concept_desc>Applied computing~Document analysis</concept_desc>
-       <concept_significance>300</concept_significance>
-       </concept>
-    <concept>
-       <concept_id>10003120.10003121.10011748</concept_id>
-       <concept_desc>Human-centered computing~Empirical studies in HCI</concept_desc>
-       <concept_significance>500</concept_significance>
-       </concept>
-   </ccs2012>
+      <concept_id>10002951.10003317</concept_id>
+      <concept_desc>Information systems~Information retrieval</concept_desc>
+      <concept_significance>500</concept_significance>
+      </concept>
+    </eval: </ccs2012>
    \end{CCSXML}
 
-   \ccsdesc[300]{Applied computing~Document analysis}
-   \ccsdesc[500]{Human-centered computing~Empirical studies in HCI}
+   \ccsdesc[500]{Human-centered computing~Human computer interaction (HCI)}
+   \ccsdesc[500]{Information systems~Information retrieval}
 
   keywords:
-    - Large language models
+    - large language models
+    - analytic decision making in data analysis 
+    - document similarity
     
   # if uncommented, this produces a teaser figure
   #
@@ -711,31 +713,31 @@ We have conducted sensitivity analysis on the text model for obtaining the decis
 
 ## Large-language models for information extraction
 
-Numerous studies have demonstrate the capability of LLMs in various information extraction tasks [@harrod2024; @katz2024; @farzi2024; @hu2024; @sciannameo2024; @gu2025; @schilling-wilhelmi2025; @gupta2024; @li2024; @baddour2024; @polak2024]. Our work adds to this growing body of evidence by showcasing the effectiveness of LLMs information extraction task, specifically for extracting analytic decisions in scientific literature. While some of the information extraction tasks has a short span of 1-4 tokens, for example in clinical data, our task involves extracting more complex decisions and justification for such analytical decisions, where the justification can span a full sentence. This changes the nature of specific named entity recognition (NER) tasks to a more general information extraction task. Our task also require LLMs to link information across sentences and paragraphs to correctly identify the variable associated with each decision and use reasoning to identify whether a justification provided is indeed a reason specific to the choice of the decision. 
+Numerous studies have demonstrated the capability of LLMs in information extraction across domains [@harrod2024; @katz2024; @farzi2024; @hu2024; @sciannameo2024; @gu2025; @schilling-wilhelmi2025; @gupta2024; @li2024; @baddour2024; @polak2024]. Our work applies the LLMs to extract analytic decisions in scientific literature, providing further evidence of their effectiveness for information extraction task. Unlike named entity recognition (NER) in clinical data, our task requires capturing more complex analytical decisions and their justifications, which typically span more than just a few tokens. This also requires linking information across sentences and sometimes sections to correctly identify the variables (e.g., linking "weather" to "temperature" and "humidity").
 
-While the extraction of decisions from literature could be largely automated with LLMs, manual validations remains essential to ensure the quality of the extracted decisions for further analysis. Most existing applications compares the LLM outputs with human-annotated samples to demonstrate the effectiveness of LLM extraction through the F1 score from precision and recall. However, this approach requires a labelled dataset for training and testing, which may not be feasible for many applications. In our application, we do not have a labelled decision dataset for training and testing. Instead, we focus on validating the LLM outputs through an interactive shiny application that allows users to review and validate each extracted decision. We also use a secondary LLM (Claude) to standardize the temporal lag choices into two categories: multi-day average and single-day lags, to standardize authors use different expressions to describe temporal lag choices. While the effectiveness with LLM to automate information extraction, it is still an open question on how to validate its output in the absence of a labelled dataset.
+While the extraction of decisions from literature could be largely automated with LLMs, manual validations remains essential to ensure the quality of the extracted decisions for downstream analysis. Most existing applications evaluate LLMs by comparing their outputs to human-annotated datasets, reporting metrics such as precision, recall, and F1 score. Because this approach depends on labeled data, which is not yet fully automated, the challenge of validating LLM outputs still an open question for information extraction tasks. In our work, we automate some of the manual validation with a secondary LLM (Claude) to standardize the temporal lag choices into two categories: multi-day averages and single-day lags.
 
-Using a default temperature of 1 and instructing the model to extract original text rather than paraphrase, we find hallucination is not a major issue with Claude and Gemini for this application. Given the probabilistic nature of LLM outputs, we also conduct sensitivity analysis on the reproducibility of the outputs and variation among different model providers (Claude and Gemini). We find that our information extraction task in general is stable across multiple runs with the same model and different models perform similarly in terms of the number of decisions extracted, although the specific decisions extracted may differ. 
+With a default temperature of one and the prompt to instruct the model to extract the original text rather than paraphrase, we find that hallucination is not a major issue with Claude and Gemini in this application. Because LLM outputs are inherently probabilistic, we also conduct sensitivity analyses on reproducibility across runs and model providers. The output is generally stable: repeated runs with the Gemini produces consistent results, and different models extracted a similar number of decisions. 
 
-While prompt engineering is used in this work to optimize the prompt for decision extraction, an alternative is to fine-tune a local model to improve LLM performance. Such approach could be beneficial for a systematic literature review, although it would require a labelled decision dataset for training and significantly more training efforts.
+While we optimize the prompt for decision extraction in this work, an alternative approach is to fine-tune a local model to enhance LLM performance. A catered local model could be useful for extraction decisions for a comprehensive literature reviews on a larger scale, but it would require greater model training efforts with labeled data. 
 
 ## Extracting other types of decisions
 
-As a demonstration, we focus on the modelling decision for the baseline model in the air pollution epidemiology literature. Analyses in this fields often fit multiple models for different health outcomes. Other models, such as distributed lag models and multi-pollutant models are also commonly used to estimate relative risks and the interaction among pollutants. These factors increase the complexity of the decision extraction for LLM, as for additional models,authors often describe only the differences from the baseline model specification, assuming other decisions remain unchanged. The LLMs will need to be able to link the decisions across different models and identify the full set of decision for each model for cross-comparison among papers.
+In this work, we focus on modeling decisions for the baseline model in the air pollution epidemiology literature. Analyses in this fields often fit multiple models for different health outcomes and secondary models, such as distributed lag models and multi-pollutant models, are also commonly used to estimate relative risks and multi-pollutants interactions. These increase the complexity of decision extraction with LLMs because authors often only describe the differences from the baseline specification, implicitly assuming other decisions remain unchanged. Hence, LLMs will need to link the decisions across different models and reconstruct the complete set of decisions for each model.
 
-Apart from modelling choices, decisions in data pre-processing are also interesting to compare. For example, in @braga2001, air pollution measures are aggregated from multiple PM10 monitors within the same location into a single value. Different decisions on how values are extracted, imputed, and aggregated are also shown to affect the results. However, these decisions are often not well documented in the literature than the modelling decisions, making it difficult for LLMs to extract them. Proper documentation and reporting of these decisions in future research are needed before our workflow could be applied to pre-processing decisions.
+Beyond modelling choices, decisions in data pre-processing are also interesting to compare. For example, @braga2001 aggregated air pollution measures from multiple PM10 monitors within the same location into a single value. Choices about data source, aggregation, imputation, among others, could also have impact on uncertainty of the estimation. However, these decisions are often less well-documented in the literature than the modelling decisions, hence cannot be extracted by LLMs. Proper documentation and reporting of these decisions in future research are needed before our workflow could be applied to pre-processing decisions.
 
-With the advocacy for reproducibility in science, it is expected that more papers will share their code and data. Code availability can serve as a supplementary source for understanding the choices made in the analysis and cross-check against the description in the manuscript. However, decision choices could be extracted from the scripts, but the rationale behind these choices may not be easily discernible given the lack of comments in the current practice.
+With growing advocacy for reproducibility, papers nowadays are expected to share code and data, if applicable. Code availability provides a useful supplementary source for identifying decisions and cross-checking them against manuscript description. However, while script may reveal what choices were made, the rationale behind these choices is often not documented under the current practice.
 
 <!-- Spatial decisions are generally not well captured because it often conducted uniformly as estimating the city individually to accommodate city heterogeneity. Some papers only consider a handful of cities, while in larger studies the individual city effects are then pooled together using random effect. -->
 
 ## Generalizability of the workflow
 
-Our workflow is scalable and generalizable. In principle, one can take a random set of applied papers for our workflow. However, insights about the data analysis practices are more likely to be learnt when papers share some similarities, for example literature on teh same topic but from different researchers can compare practices, papers use the same methodology but from different fields enables us to compare practices across fields, or even paper with the same variables used and how they are used in different fields.
+In principle, our workflow is scalable and generalizable to a random set of applied papers. However, insights about the data analysis practices are more likely to emerge when papers share certain similarities. For example literature on the same topic but authored by different researchers enables comparisons of practices within a field; literature that use the same methodology across disciplines allow comparisons across fields; and literature that considers the same variables can show how those variables are used in different domains.
 
-The prompt for LLMs to extract decisions will need to be customized for individual application of our workflow. The general LLM prompt structure of separating task and rules can be retained and the data structure for recording decisions can be retained. Users may want to further customize the examples throughout the prompt to suit their specific applications. The shiny application for interactively validating and standardizing decisions can be reused for different applications. Calculation of paper similarity requires comparing decisions of the same variable and type among paper pairs. For papers with different levels of similarities, the number of comparable decisions may be limited and diagnostic functions in the `R` package can be used to view the decision between paper pair side by side or provide summary statistics on the number of decisions available for calculating the paper similarities. Uncertainty visualization could be used to highlight the confidence in the similarity metric based on the number of comparable decisions. 
+The LLM prompt for extracting decisions will need to be customized for each application of the workflow. The general LLM prompt structure and the data schema for recording decisions can be retained, while examples within the prompt may be adapted to suit the specific application. The shiny application for interactively validating and standardizing decisions can be reused across applications. Calculating paper similarity requires comparing decisions on the same variable and type across paper pairs. For papers with limited similarities, the number of comparable decisions may be limited. Diagnostic functions are available to display decisions side by side or provide summary statistics on the number of comparable decisions. Uncertainty visualization could be used to highlight the confidence in the similarity metric based on the number of comparable decisions. 
 
-As a new method to collect analytic decision data from literature, our work can connect to meta-analysis to assess how different decisions affect the results and also in general literature search and recommendation applications to find similar papers based on the decisions made in the analysis.
+As a new method for collecting analytic decision data from literature, our workflow can be connected to meta-analysis to assess how different decisions influence results. More broadly, it can also be integrated into literature search and recommender systems to suggest similar papers based on the analytic decisions they employ.
 
 # Conclusion {#sec-conclusion}
 
